Fix misplaced "no version" check #22
Signed-off-by: Nazar <youtube@superneon4ik.me>